Add asynchronous unified logging